# go-log-filter

./: .gitignore  README.md  consumer.go  doc.sh  filter.go  filter_test.go  go.mod  go.sum  lint.sh  sec.sh  skip.go  skip_test.go  source.go  transform.go  transform_test.go  vuln.sh
data/source/sql/: bsrc.go
examples/journalctl/json/realtime/: .gitignore  README.md  main.go  main.py  wasm.py  ymdh.py
examples/journalctl/json/realtime/native/rs-j2realtime/: Cargo.toml
examples/journalctl/json/realtime/native/rs-j2realtime/src/: main.rs
examples/journalctl/json/realtime/wasm/rs-j2realtime/: Cargo.toml
examples/journalctl/json/realtime/wasm/rs-j2realtime/src/: lib.rs
examples/journalctl/protobuf/sqlite/realtime/: README.md  journalctl.sqlite3.db  jtyp_pb2.py  log2realtime  sqlite2pb2realtime.py
examples/journalctl/protobuf/sqlite/realtime/go-log2realtime/: jtyp.proto  main.go  sql2bytes.go  sqlite2bytes.go
examples/journalctl/protobuf/sqlite/realtime/go-log2realtime/protobuf/journalctl/easymap/: jtyp.pb.go
tools/preprocess/convert/json/sqlite/j2wasm2sqlite/rs-journal2pb/: json2pb.py  jtyp.proto  jtyp_pb2.py
util/: compose.go  curry.go  err.go  swap.go
