[package]
name = "rs-j2realtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release-wasm]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.serde_json]
version = "1.0.96"
default-features = false
features = ["alloc"]

[dependencies.serde]
version = "1.0.162"
default-features = false
features = ["alloc", "derive"]
